# whisper-ware

./: Cargo.toml  LICENSE  README.md  build.rs
src/: config.rs  device_callback.rs  error.rs  main.rs
