[package]
name = "whisper_ware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
kanal = "0.1.0-pre8"
vst = "0.4"
winapi = { version = "0.3", features = ["minwindef", "windef", "winbase"] }
tray-icon = "0.13"
simple-logging = "2.0"
log = "0.4"
ratelimit = "0.9"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
dirs = "5.0.1"
atomic_float = "0.1.0"
minimal-windows-gui = { git = "https://github.com/Lonami/rust-windows-gui" }
lazy_static = "1.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1