[package]
name = "whisper_ware"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.16"
kanal = "0.1"
vst = "=0.3.0"
winapi = { version = "0.3", features = ["minwindef", "windef", "winbase", "winerror", "objbase", "propsys", "combaseapi", "mmdeviceapi", "ntdef", "unknwnbase", "wtypes"] }
tray-icon = "0.21"
simple-logging = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
atomic_float = "1"
minimal-windows-gui = { git = "https://github.com/Lonami/rust-windows-gui" }
lazy_static = "1"
log-panics = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1